--- a/src/style.scss
+++ b/src/style.scss
@@ -139,8 +139,14 @@ body {
   width: 1rem;
   text-align: center;
   border-radius: 12px;
-  background-color: yellow;
+  background-color: purple;
   z-index: 3;
+
+  &:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid white;
+  }
 }
 
 /* About Me Section */
