--- a/src/style.scss
+++ b/src/style.scss
@@ -139,6 +139,7 @@ body {
   height: 1rem;
   width: 3rem;
   text-align: center;
+  font-weight: bold;
   border-radius: 12px;
   background-color: purple;
   z-index: 2;
@@ -244,23 +245,40 @@ body {
   height: 72px;
   width: 72px;
   z-index: 2;
+}
 
+.iconContainer {
+  position: relative;
+  width: 72px;
+  height: 72px;
+  float: left;
+  margin-right: 10px;
   &:hover {
-    transform: scale(1.25);
-    transition: 0.25s;
-    color: lightblue;
+    cursor: pointer;
   }
 }
 
-/*Css specific to an icon. */
-.htmlIcon {
-  &:hover {
-    color: red;
-    border: 1px solid black;
-  }
-  &::after {
-    content: "test";
-  }
+/* Child Text Container */
+.iconContainer div {
+  position: absolute;
+  bottom: 0;
+  left: -18px;
+  background: black;
+  color: white;
+  margin-bottom: 15px;
+  font-family: sans-serif;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: visibility 0s, opacity 0.5s linear;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+
+.iconContainer:hover div {
+  width: 75px;
+  padding: 8px 15px;
+  text-align: center;
+  visibility: visible;
+  opacity: 0.7;
 }
 
 /* Contact Section */
