--- a/src/style.scss
+++ b/src/style.scss
@@ -47,7 +47,7 @@ body {
 
 .intro {
   position: absolute;
-  top: 20rem;
+  top: 12rem;
   left: 8.75rem;
   width: 15%;
   height: 30rem;
@@ -58,7 +58,7 @@ body {
 
 .introSvg {
   position: absolute;
-  /* width: 66%; */
+  /* width: 30%; */
   width: 80rem;
   height: 40rem;
   top: 10rem;
@@ -93,7 +93,7 @@ body {
   justify-content: center;
   margin: 8rem auto;
   height: 40rem;
-  width: 60rem;
+  width: 50%;
   border-radius: 12px;
 }
 
@@ -142,6 +142,7 @@ body {
   font-weight: bold;
   border-radius: 12px;
   background-color: purple;
+  color: white;
   z-index: 2;
 
   &:hover {
@@ -290,7 +291,7 @@ body {
   display: flex;
   flex-direction: row;
   margin: 10rem auto;
-  width: 60rem;
+  width: 60%;
   height: 40rem;
   background-color: rgb(82, 63, 152);
   border-radius: 12px;
@@ -299,7 +300,7 @@ body {
 
 .leftBox {
   height: 100%;
-  width: 20rem;
+  width: 30%;
   background-color: rgb(21, 16, 39);
   border-radius: 12px;
 }
@@ -312,7 +313,7 @@ body {
 
 .formBox {
   display: relative;
-  width: 30rem;
+  width: 60%;
   height: 20rem;
   margin: 2rem auto;
 
