--- a/src/style.scss
+++ b/src/style.scss
@@ -137,11 +137,11 @@ body {
   height: 1rem;
   width: 3rem;
   text-align: center;
-  font-weight: bold;
   border-radius: 12px;
   background-color: purple;
   color: white;
   z-index: 2;
+  box-shadow: 0px 0px 8px black;
 
   &:hover {
     background-color: white;
@@ -392,6 +392,17 @@ body {
   .leftBox {
     width: 16rem;
   }
+
+  .formBox {
+    border: 1px solid black;
+    input {
+      width: 20rem;
+      margin: 0 auto;
+    }
+    textarea {
+      width: 20rem;
+    }
+  }
 }
 
 @media only screen and (max-width: 1300px) {
@@ -404,6 +415,7 @@ body {
 @media only screen and (max-width: 1100px) {
   .intro {
     width: 40%;
+    left: 10rem;
   }
 
   .introSvg {
@@ -431,5 +443,9 @@ body {
   .iconContainer {
     display: flex;
     justify-content: center;
+  }
+
+  .leftBox {
+    display: none;
   }
 }
