--- a/src/style.scss
+++ b/src/style.scss
@@ -47,7 +47,7 @@ body {
 
 .intro {
   position: absolute;
-  top: 12rem;
+  top: 15rem;
   left: 5%;
   width: 15%;
   height: 30rem;
@@ -90,7 +90,7 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: 8rem auto;
-  height: 40rem;
+  height: 65%;
   width: 50%;
   border-radius: 12px;
   border: 1px solid red;
@@ -99,13 +99,13 @@ body {
 .projectRow {
   display: flex;
   justify-content: space-around;
+  height: 50%;
   width: 100%;
   border: 1px solid blue;
 }
 
 .project {
-  height: 15rem;
-  width: 15rem;
+  width: 20rem;
   border: 1px solid black;
   background-color: gray;
   margin: 2rem;
@@ -116,11 +116,12 @@ body {
 
 .projectTitle {
   text-align: center;
+  height: 20%;
 }
 
 .projectImage {
   width: 100%;
-  height: 10rem;
+  height: 60%;
   background-color: blue;
   &:hover {
     background-color: white;
@@ -130,7 +131,7 @@ body {
 
 .projectLinks {
   background-color: red;
-  height: 2rem;
+  height: 20%;
   width: 100%;
   text-align: center;
 }
@@ -255,6 +256,7 @@ body {
   height: 72px;
   float: left;
   margin-right: 10px;
+
   &:hover {
     cursor: pointer;
   }
@@ -272,7 +274,7 @@ body {
   opacity: 0;
   visibility: hidden;
   -webkit-transition: visibility 0s, opacity 0.5s linear;
-  transition: visibility 0s, opacity 0.5s linear;
+  transition: visibility 0s, opacity 0.25s linear;
 }
 
 .iconContainer:hover div {
@@ -280,7 +282,7 @@ body {
   padding: 8px 15px;
   text-align: center;
   visibility: visible;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 /* Contact Section */
@@ -292,7 +294,7 @@ body {
   display: flex;
   flex-direction: row;
   margin: 10rem auto;
-  width: 60%;
+  width: 50%;
   height: 60%;
   background-color: rgb(82, 63, 152);
   border-radius: 12px;
@@ -370,10 +372,20 @@ body {
 
 /* Media queries */
 
+@media only screen and (max-width: 1650px) {
+  .introSvg {
+    width: 65rem;
+  }
+}
+
 @media only screen and (max-width: 1500px) {
   .introSvg {
     top: 12rem;
     width: 60rem;
+  }
+
+  .projectArea {
+    width: 80%;
   }
 }
 
@@ -398,9 +410,6 @@ body {
     top: 14rem;
     width: 50rem;
   }
-  .projectArea {
-    width: 70%;
-  }
 }
 
 @media only screen and (max-width: 1100px) {
@@ -412,6 +421,10 @@ body {
 
   .introSvg {
     visibility: hidden;
+  }
+
+  .project {
+    width: 15rem;
   }
 
   .leftBackground {
@@ -460,22 +473,11 @@ body {
     width: 60%;
   }
 
-  .projectArea {
-    width: 70%;
-  }
   .projectRow {
-    border: 1px solid black;
-  }
-
-  .project {
-    width: 45rem;
-    border: 1px solid yellow;
+    justify-content: end;
   }
 
   .iconify {
     width: 36px;
   }
-}
-
-@media only screen and (max-width: 400px) {
 }
