--- a/src/style.scss
+++ b/src/style.scss
@@ -248,6 +248,7 @@ body {
   height: 72px;
   width: 72px;
   z-index: 2;
+  border: 1px solid black;
 }
 
 .iconContainer {
@@ -255,7 +256,7 @@ body {
   width: 72px;
   height: 72px;
   float: left;
-  margin-right: 10px;
+  // margin-right: 10px;
 
   &:hover {
     cursor: pointer;
@@ -435,11 +436,16 @@ body {
     width: 48%;
   }
 
+  .aboutMeBox {
+    line-height: 1.5rem;
+  }
+
   .rightBackground {
     width: 48%;
   }
 
   .iconify {
+    height: 48px;
     width: 48px;
   }
   .techBox {
@@ -450,6 +456,13 @@ body {
   .iconContainer {
     display: flex;
     justify-content: center;
+    margin-bottom: 0px;
+    height: 48px;
+    width: 48px;
+    & div {
+      height: 1rem;
+      margin-bottom: 15px;
+    }
   }
 
   .leftBox {
@@ -479,5 +492,9 @@ body {
 
   .iconify {
     width: 36px;
+  }
+
+  .techBox {
+    row-gap: 0rem;
   }
 }
