--- a/public/style.css
+++ b/public/style.css
@@ -48,11 +48,20 @@ body {
   position: absolute;
   top: 15rem;
   left: 5%;
-  width: 15%;
+  width: 25%;
   height: 30rem;
   color: white;
   line-height: 2rem;
   z-index: 2;
+}
+
+.introHeader {
+  color: rgb(67, 133, 210);
+  font-size: 4rem;
+}
+
+.introLine {
+  font-size: 1.5rem;
 }
 
 .introSvg {
@@ -93,7 +102,9 @@ body {
   height: 65%;
   width: 50%;
   border-radius: 12px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
+  background-color: #1e1838;
+  box-shadow: 0px 0px 12px black;
 }
 
 .projectRow {
@@ -101,7 +112,7 @@ body {
   justify-content: space-around;
   height: 50%;
   width: 100%;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 .project {
@@ -245,7 +256,7 @@ body {
   height: 72px;
   width: 72px;
   z-index: 2;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .iconContainer {
@@ -362,21 +373,31 @@ body {
 }
 
 /* Media queries */
-@media only screen and (max-width: 1650px) {
+@media only screen and (max-width: 1875px) {
   .introSvg {
     width: 65rem;
   }
 }
-@media only screen and (max-width: 1500px) {
+@media only screen and (max-width: 1650px) {
+  .intro {
+    width: 30%;
+  }
+
   .introSvg {
     top: 12rem;
-    width: 60rem;
+    width: 50rem;
   }
   .projectArea {
     width: 80%;
   }
 }
 @media only screen and (max-width: 1400px) {
+  .introHeader {
+    line-height: 3rem;
+  }
+  .contactMainBox {
+    width: 75%;
+  }
   .leftBox {
     width: 16rem;
   }
@@ -388,13 +409,8 @@ body {
     width: 100%;
   }
 }
-@media only screen and (max-width: 1300px) {
-  .introSvg {
-    top: 14rem;
-    width: 50rem;
-  }
-}
-@media only screen and (max-width: 1100px) {
+
+@media only screen and (max-width: 1200px) {
   .intro {
     width: 50%;
     left: 15%;
@@ -438,6 +454,7 @@ body {
     height: 1rem;
     margin-bottom: 15px;
   }
+
   .leftBox {
     display: none;
   }
@@ -446,6 +463,7 @@ body {
     margin-top: 10%;
   }
 }
+
 @media only screen and (max-width: 700px) {
   .buttonBar {
     width: 100%;
@@ -464,6 +482,22 @@ body {
   }
   .techBox {
     row-gap: 0rem;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .projectRow {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .project {
+    height: 10rem;
+    margin: 1rem auto;
+  }
+
+  .aboutMeBox {
+    line-height: 0.9rem;
   }
 }
 
