--- a/public/style.css
+++ b/public/style.css
@@ -102,7 +102,6 @@ body {
   height: 65%;
   width: 50%;
   border-radius: 12px;
-  /* border: 1px solid red; */
   background-color: #1e1838;
   box-shadow: 0px 0px 12px black;
 }
@@ -112,7 +111,6 @@ body {
   justify-content: space-around;
   height: 50%;
   width: 100%;
-  /* border: 1px solid blue; */
 }
 
 .project {
@@ -176,7 +174,7 @@ body {
 }
 
 .leftBackground {
-  background-image: url("../img/Laptop.svg");
+  background-image: url("./img/Laptop.svg");
   height: 100%;
   width: 30%;
   background-position: 90% 50%;
@@ -215,7 +213,7 @@ body {
   bottom: 0px;
   left: 0px;
   opacity: 0.25;
-  background-image: url("../img/Laptop.jpg");
+  background-image: url("./img/Laptop.jpg");
   background-size: 100% 100%;
   background-size: cover;
 }
@@ -256,7 +254,6 @@ body {
   height: 72px;
   width: 72px;
   z-index: 2;
-  /* border: 1px solid black; */
 }
 
 .iconContainer {
@@ -382,7 +379,6 @@ body {
   .intro {
     width: 30%;
   }
-
   .introSvg {
     top: 12rem;
     width: 50rem;
@@ -409,7 +405,6 @@ body {
     width: 100%;
   }
 }
-
 @media only screen and (max-width: 1200px) {
   .intro {
     width: 50%;
@@ -454,7 +449,6 @@ body {
     height: 1rem;
     margin-bottom: 15px;
   }
-
   .leftBox {
     display: none;
   }
@@ -463,7 +457,6 @@ body {
     margin-top: 10%;
   }
 }
-
 @media only screen and (max-width: 700px) {
   .buttonBar {
     width: 100%;
@@ -484,21 +477,19 @@ body {
     row-gap: 0rem;
   }
 }
-
 @media only screen and (max-width: 425px) {
   .projectRow {
     flex-direction: column;
     height: 100%;
   }
-
   .project {
     height: 10rem;
     margin: 1rem auto;
   }
-
   .aboutMeBox {
     line-height: 0.9rem;
   }
 }
+/*# sourceMappingURL=style.css.map */
 
 /*# sourceMappingURL=style.css.map */
