--- a/src/style.scss
+++ b/src/style.scss
@@ -49,11 +49,20 @@ body {
   position: absolute;
   top: 15rem;
   left: 5%;
-  width: 15%;
+  width: 25%;
   height: 30rem;
   color: white;
   line-height: 2rem;
   z-index: 2;
+}
+
+.introHeader {
+  color: rgb(67, 133, 210);
+  font-size: 4rem;
+}
+
+.introLine {
+  font-size: 1.5rem;
 }
 
 .introSvg {
@@ -93,7 +102,9 @@ body {
   height: 65%;
   width: 50%;
   border-radius: 12px;
-  border: 1px solid red;
+  // border: 1px solid red;
+  background-color: #1e1838;
+  box-shadow: 0px 0px 12px black;
 }
 
 .projectRow {
@@ -101,7 +112,7 @@ body {
   justify-content: space-around;
   height: 50%;
   width: 100%;
-  border: 1px solid blue;
+  // border: 1px solid blue;
 }
 
 .project {
@@ -166,7 +177,7 @@ body {
 }
 
 .leftBackground {
-  background-image: url("../img/Laptop.svg");
+  background-image: url("./img/Laptop.svg");
   height: 100%;
   width: 30%;
   background-position: 90% 50%;
@@ -205,7 +216,7 @@ body {
     bottom: 0px;
     left: 0px;
     opacity: 0.25;
-    background-image: url("../img/Laptop.jpg");
+    background-image: url("./img/Laptop.jpg");
     background-size: 100% 100%;
     background-size: cover;
   }
@@ -248,7 +259,7 @@ body {
   height: 72px;
   width: 72px;
   z-index: 2;
-  border: 1px solid black;
+  // border: 1px solid black;
 }
 
 .iconContainer {
@@ -373,77 +384,69 @@ body {
 
 /* Media queries */
 
-@media only screen and (max-width: 1650px) {
+@media only screen and (max-width: 1875px) {
   .introSvg {
     width: 65rem;
   }
 }
 
-@media only screen and (max-width: 1500px) {
-  .introSvg {
-    top: 12rem;
-    width: 60rem;
+@media only screen and (max-width: 1650px) {
+  .intro {
+    width: 30%;
   }
 
+  .introSvg {
+    top: 12rem;
+    width: 50rem;
+  }
   .projectArea {
     width: 80%;
   }
 }
 
 @media only screen and (max-width: 1400px) {
+  .introHeader {
+    line-height: 3rem;
+  }
+  .contactMainBox {
+    width: 75%;
+  }
   .leftBox {
     width: 16rem;
   }
-
-  .formBox {
-    input {
-      width: 100%;
-      margin: 0 auto;
-    }
-    textarea {
-      width: 100%;
-    }
+  .formBox input {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .formBox textarea {
+    width: 100%;
   }
 }
 
-@media only screen and (max-width: 1300px) {
-  .introSvg {
-    top: 14rem;
-    width: 50rem;
-  }
-}
-
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1200px) {
   .intro {
     width: 50%;
     left: 15%;
     top: 10rem;
   }
-
   .introSvg {
     visibility: hidden;
   }
-
   .project {
     width: 15rem;
   }
-
   .leftBackground {
     display: none;
   }
-
   .midBackground {
     width: 48%;
   }
-
   .aboutMeBox {
     line-height: 1.5rem;
   }
-
   .rightBackground {
     width: 48%;
   }
-
   .iconify {
     height: 48px;
     width: 48px;
@@ -459,10 +462,10 @@ body {
     margin-bottom: 0px;
     height: 48px;
     width: 48px;
-    & div {
-      height: 1rem;
-      margin-bottom: 15px;
-    }
+  }
+  .iconContainer div {
+    height: 1rem;
+    margin-bottom: 15px;
   }
 
   .leftBox {
@@ -480,21 +483,35 @@ body {
     right: 0;
     font-size: small;
   }
-
   .intro {
     top: 5rem;
     width: 60%;
   }
-
   .projectRow {
     justify-content: end;
   }
-
   .iconify {
     width: 36px;
   }
-
   .techBox {
     row-gap: 0rem;
   }
 }
+
+@media only screen and (max-width: 425px) {
+  .projectRow {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .project {
+    height: 10rem;
+    margin: 1rem auto;
+  }
+
+  .aboutMeBox {
+    line-height: 0.9rem;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
