update look at project section

--- a/public/style.css
+++ b/public/style.css
@@ -124,7 +124,9 @@ body {
 }
 
 .projectTitle {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 20%;
 }
 
@@ -142,7 +144,19 @@ body {
   background-color: red;
   height: 20%;
   width: 100%;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.projectLinks .iconify {
+  color: white;
+  height: 36px;
+  width: 36x;
+}
+.projectLinks .iconify:hover {
+  color: black;
+  transform: scale(1.2);
+  transition: 0.3s;
 }
 
 .return {
