--- a/public/style.css
+++ b/public/style.css
@@ -100,7 +100,7 @@ body {
   justify-content: center;
   margin: 8rem auto;
   height: 65%;
-  width: 50%;
+  width: 75%;
   border-radius: 12px;
   background-color: #1e1838;
   box-shadow: 0px 0px 12px black;
@@ -109,7 +109,7 @@ body {
 .projectRow {
   display: flex;
   justify-content: space-around;
-  height: 50%;
+  height: 60%;
   width: 100%;
 }
 
@@ -131,12 +131,17 @@ body {
 }
 
 .projectImage {
+  display: flex;
   width: 100%;
-  height: 60%;
-  background-color: blue;
+  background-color: lightgrey;
 }
-.projectImage:hover {
+.projectImage img {
+  width: 100%;
+  opacity: 75%;
+}
+.projectImage img:hover {
   background-color: white;
+  opacity: 100%;
   transition: 0.5s;
 }
 
