--- a/src/style.scss
+++ b/src/style.scss
@@ -100,17 +100,17 @@ body {
   justify-content: center;
   margin: 8rem auto;
   height: 65%;
-  width: 50%;
+  width: 75%;
   border-radius: 12px;
-  // border: 1px solid red;
   background-color: #1e1838;
   box-shadow: 0px 0px 12px black;
+  // border: 1px solid red;
 }
 
 .projectRow {
   display: flex;
   justify-content: space-around;
-  height: 50%;
+  height: 60%;
   width: 100%;
   // border: 1px solid blue;
 }
@@ -133,12 +133,19 @@ body {
 }
 
 .projectImage {
+  display: flex;
   width: 100%;
-  height: 60%;
-  background-color: blue;
-  &:hover {
-    background-color: white;
-    transition: 0.5s;
+  background-color: lightgrey;
+
+  img {
+    width: 100%;
+    opacity: 75%;
+
+    &:hover {
+      background-color: white;
+      opacity: 100%;
+      transition: 0.5s;
+    }
   }
 }
 
