--- a/public/style.css
+++ b/public/style.css
@@ -114,30 +114,36 @@ body {
 }
 
 .project {
-  width: 20rem;
-  border: 1px solid black;
-  background-color: gray;
-  margin: 2rem;
+  width: 25rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 12px black;
+  background-color: rgb(43, 42, 42);
+  border-radius: 12px;
 }
 
 .projectTitle {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
   height: 20%;
+  color: white;
+  background-color: #3e3075;
+  font-size: large;
+  border: 1px solid black;
+  border-radius: 12px;
 }
 
 .projectImage {
-  display: flex;
   width: 100%;
-  background-color: lightgrey;
+  aspect-ratio: 2/1;
 }
 .projectImage img {
   width: 100%;
-  opacity: 75%;
+  opacity: 50%;
 }
 .projectImage img:hover {
   background-color: white;
@@ -146,12 +152,13 @@ body {
 }
 
 .projectLinks {
-  background-color: red;
+  background-color: black;
   height: 20%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 12px;
 }
 .projectLinks .iconify {
   color: white;
@@ -159,7 +166,7 @@ body {
   width: 36x;
 }
 .projectLinks .iconify:hover {
-  color: black;
+  color: #2e2456;
   transform: scale(1.2);
   transition: 0.3s;
 }
