--- a/src/style.scss
+++ b/src/style.scss
@@ -116,30 +116,36 @@ body {
 }
 
 .project {
-  width: 20rem;
-  border: 1px solid black;
-  background-color: gray;
-  margin: 2rem;
+  width: 25rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 12px black;
+  background-color: rgb(43, 42, 42);
+  border-radius: 12px;
 }
 
 .projectTitle {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
   height: 20%;
+  color: white;
+  background-color: #3e3075;
+  font-size: large;
+  border: 1px solid black;
+  border-radius: 12px;
 }
 
 .projectImage {
-  display: flex;
   width: 100%;
-  background-color: lightgrey;
+  aspect-ratio: 2/1;
 
   img {
     width: 100%;
-    opacity: 75%;
+    opacity: 50%;
 
     &:hover {
       background-color: white;
@@ -150,12 +156,13 @@ body {
 }
 
 .projectLinks {
-  background-color: red;
+  background-color: black;
   height: 20%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 12px;
 
   .iconify {
     color: white;
@@ -163,7 +170,7 @@ body {
     width: 36x;
 
     &:hover {
-      color: black;
+      color: #2e2456;
       transform: scale(1.2);
       transition: 0.3s;
     }
