--- a/src/style.scss
+++ b/src/style.scss
@@ -47,7 +47,7 @@ body {
 
 .intro {
   position: absolute;
-  top: 15rem;
+  top: 18rem;
   left: 5%;
   width: 25%;
   height: 30rem;
@@ -68,7 +68,7 @@ body {
 .introSvg {
   position: absolute;
   width: 80rem;
-  top: 10rem;
+  top: 8rem;
   right: 5.5rem;
 }
 
@@ -117,6 +117,7 @@ body {
 
 .project {
   width: 25rem;
+  height: 22rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -430,7 +431,7 @@ body {
     width: 50rem;
   }
   .projectArea {
-    width: 80%;
+    width: 90%;
   }
 }
 
@@ -463,6 +464,7 @@ body {
     visibility: hidden;
   }
   .project {
+    height: 14rem;
     width: 15rem;
   }
   .leftBackground {
@@ -507,7 +509,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
   .buttonBar {
     width: 100%;
     right: 0;
@@ -517,9 +519,21 @@ body {
     top: 5rem;
     width: 60%;
   }
-  .projectRow {
-    justify-content: end;
+
+  .projectArea {
+    height: 80%;
   }
+
+  .projectRow {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .project {
+    height: 14rem;
+    margin: 1rem auto;
+  }
+
   .iconify {
     width: 36px;
   }
@@ -529,16 +543,6 @@ body {
 }
 
 @media only screen and (max-width: 425px) {
-  .projectRow {
-    flex-direction: column;
-    height: 100%;
-  }
-
-  .project {
-    height: 10rem;
-    margin: 1rem auto;
-  }
-
   .aboutMeBox {
     line-height: 0.9rem;
   }
