--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,9 @@ body {
   transform: scale(1.2);
   transition: 0.3s;
 }
+.buttonBar a:visited {
+  color: #8a43d2;
+}
 
 .resumeButton {
   color: purple;
@@ -98,6 +101,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 8rem auto;
   height: 65%;
   width: 75%;
@@ -330,6 +334,7 @@ body {
   background-color: rgb(82, 63, 152);
   border-radius: 12px;
   color: white;
+  box-shadow: 0px 0px 12px black;
 }
 
 .leftBox {
@@ -397,6 +402,40 @@ body {
 }
 
 /* Media queries */
+@media only screen and (min-width: 1921px) {
+  .buttonBar {
+    top: 4rem;
+    right: 4rem;
+    width: 100rem;
+    height: 8rem;
+    font-size: 4rem;
+  }
+  .resumeButton {
+    font-size: 8rem;
+  }
+  .intro {
+    top: 30%;
+    left: 5%;
+    width: 25%;
+    height: 30rem;
+    color: white;
+    line-height: 4rem;
+    z-index: 2;
+  }
+  .introHeader {
+    color: rgb(67, 133, 210);
+    font-size: 6rem;
+  }
+  .introLine {
+    font-size: 3rem;
+  }
+  .introSvg {
+    position: absolute;
+    width: 70%;
+    top: 10%;
+    right: 5%;
+  }
+}
 @media only screen and (max-width: 1875px) {
   .introSvg {
     width: 65rem;
