--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,7 @@ body {
 
 .container {
   width: 1440px;
+  width: 75%;
   margin: 0 auto;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.8);
 }
@@ -78,9 +79,9 @@ body {
 
 .introSvg {
   position: absolute;
-  width: 60rem;
-  top: 12rem;
-  right: 5.5rem;
+  width: 75%;
+  top: 25%;
+  right: 2.5%;
 }
 
 .mainImage {
