--- a/src/style.scss
+++ b/src/style.scss
@@ -12,6 +12,7 @@ body {
 
 .container {
   width: 1440px;
+  width: 75%;
   margin: 0 auto;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.8);
 }
@@ -79,9 +80,12 @@ body {
 
 .introSvg {
   position: absolute;
-  width: 60rem;
-  top: 12rem;
-  right: 5.5rem;
+  // width: 60rem;
+  width: 75%;
+  // top: 12rem;
+  top: 25%;
+  // right: 5.5rem;
+  right: 2.5%;
 }
 
 .mainImage {
