--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,7 @@ body {
 .intro {
   position: absolute;
   top: 18rem;
-  left: 5%;
+  left: 2.5%;
   width: 25%;
   padding: 1rem;
   height: 30rem;
@@ -65,6 +65,7 @@ body {
   line-height: 2rem;
   z-index: 2;
   background: rgba(255, 255, 255, 0.05);
+  border-radius: 12px;
 }
 
 .introHeader {
@@ -79,7 +80,7 @@ body {
 
 .introSvg {
   position: absolute;
-  width: 75%;
+  width: 70%;
   top: 25%;
   right: 2.5%;
 }
