--- a/src/style.scss
+++ b/src/style.scss
@@ -38,6 +38,7 @@ body {
   height: 2rem;
   align-items: center;
   justify-content: space-evenly;
+
   a {
     text-decoration: none;
 
@@ -58,7 +59,7 @@ body {
 .intro {
   position: absolute;
   top: 18rem;
-  left: 5%;
+  left: 2.5%;
   width: 25%;
   padding: 1rem;
   height: 30rem;
@@ -66,6 +67,7 @@ body {
   line-height: 2rem;
   z-index: 2;
   background: rgb(255, 255, 255, 0.05);
+  border-radius: 12px;
 }
 
 .introHeader {
@@ -80,11 +82,8 @@ body {
 
 .introSvg {
   position: absolute;
-  // width: 60rem;
-  width: 75%;
-  // top: 12rem;
+  width: 70%;
   top: 25%;
-  // right: 5.5rem;
   right: 2.5%;
 }
 
